--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
