--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
+    "query:generate": "gqlg --schemaFilePath ./schema.graphql --destDirPath ./src/gql --depthLimit 5",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "private": true,
@@ -14,7 +15,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@swc/helpers": "~0.5.0",
     "bootstrap": "^5.3.0",
-    "graphql": "^16.7.1",
+    "globby": "^13.2.2",
+    "graphql": "^16.8.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
@@ -25,9 +27,12 @@
     "redux-persist-transform-encrypt": "^5.0.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "4.0.1",
-    "@graphql-codegen/client-preset": "4.0.1",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/introspection": "4.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@nx/cypress": "16.5.0",
     "@nx/eslint-plugin": "16.5.0",
     "@nx/js": "16.5.0",
@@ -55,6 +60,8 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "gql-generator": "^1.0.19",
+    "gql-generator-node": "^2.1.16",
     "jsdom": "~22.1.0",
     "nx": "16.5.0",
     "nx-cloud": "latest",
